# myhttpd

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.markdown  httpd.h
httpd/: configurations.h  connection.c  connection.h  daemon.c  httpd.h  httpd_string.c  httpd_string.h  internal.h  macros.h  main.c  memorypool.c  memorypool.h  reason_phrase.c  reason_phrase.h  response.c
includes/: configurations.h  httpd.h  internal.h  ipc.h  ipcd.h  response.h  types.h
ipcd/: ipcd.c  ipcd.h  main.c
myhttpd/: Makefile  connection.c  connection.h  daemon.c  httpd_string.c  httpd_string.h  ipc.c  ipc.h  ipc_test.c  main.c  memorypool.c  memorypool.h  reason_phrase.c  reason_phrase.h  response.c
myhttpd.xcodeproj/: project.pbxproj
myhttpd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
myhttpd.xcodeproj/xcuserdata/lastland.xcuserdatad/xcschemes/: myhttpd.xcscheme  xcschememanagement.plist
