cmake_minimum_required(VERSION 3.0)
project(myhttpd)
include_directories(includes)
aux_source_directory(myhttpd SERVER)
aux_source_directory(ipcd IPCD)
if (NOT APPLE)
    set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-lrt -pthread")
endif(NOT APPLE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(server ${SERVER})
add_executable(daemon ${IPCD})
