cmake_minimum_required(VERSION 2.8)
project(httpd)
include_directories(includes)
aux_source_directory(httpd SERVER)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(httpd ${SERVER})
if (NOT APPLE)
    set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread")
    TARGET_LINK_LIBRARIES(httpd ${Boost_LIBRARIES} rt)
endif(NOT APPLE)
